k8s-configs/ping-cloud/base/pingaccess-was/base/statefulset.yaml
# This defines the pingaccess-was admin deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was-admin
  labels:
    cluster: pingaccess-was-cluster
    role: pingaccess-was-admin
spec:
  selector:
    matchLabels:
      role: pingaccess-was-admin
  replicas: 1
  serviceName: pingaccess-was-admin
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-was-admin
      labels:
        cluster: pingaccess-was-cluster
        role: pingaccess-was-admin
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingaccess-was-admin
        image: pingcloud-mirror.jfrog.io/pingidentity/pingaccess:2010-6.1.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: persistent-storage
          mountPath: /repo
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /usr/local/bin/skbn
          subPath: skbn
        - name: out-dir
          mountPath: /opt/out
        - name: pingaccess-was-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/85-pa-admin-readiness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-admin-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        ports:
        - containerPort: 9000
        - containerPort: 9090
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: efs-claim
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-was-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingaccess-was-license
        secret:
          secretName: pingaccess-was-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-was-passwords
        secret:
          secretName: pingaccess-was-passwords
          optional: true
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingaccess-was-gp2
      resources:
        requests:
          storage: 20Gi

---

# This defines the pingaccess-was engine deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was
  labels:
    cluster: pingaccess-was-cluster
    role: pingaccess-was-engine
spec:
  selector:
    matchLabels:
      role: pingaccess-was-engine
  replicas: 2
  serviceName: pingaccess-was
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-was-engine
      labels:
        cluster: pingaccess-was-cluster
        role: pingaccess-was-engine
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each PA runtime pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - pingaccess-was-engine
              topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: pingaccess-was
        image: pingcloud-mirror.jfrog.io/pingidentity/pingaccess:2010-6.1.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /usr/local/bin/skbn
          subPath: skbn
        - name: pingaccess-was-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-was-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-was-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/hooks/86-pre-stop.sh
        ports:
        - containerPort: 3000
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-was-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-was-license
        secret:
          secretName: pingaccess-was-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-was-passwords
        secret:
          secretName: pingaccess-was-passwords
          optional: true
          defaultMode: 0400
