k8s-configs/ping-cloud/base/pingaccess-was/base/service.yaml
# This service exposes the pingaccess-was admin and runtime ports to the cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess-was-admin
spec:
  ports:
  - port: 9000
    name: pingaccess-was-admin
  - port: 9090
    name: pingaccess-was-config-query
  selector:
    role: pingaccess-was-admin

---

# This service exposes the pingaccess-was runtime engine ports within cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess-was
spec:
  ports:
    - port: 443
      name: pingaccess-was-engine
      targetPort: 3000
  selector:
    role: pingaccess-was-engine
